samples/_failures_safe/1761043834_7f3ed4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0a802c6c.c: In function ‘print_stats’:
./samples/SAFE/__tmp_0a802c6c.c:137:12: error: missing terminating " character
  137 |     printf("Log Analysis Results:\n
      |            ^~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_0a802c6c.c:137:5: error: expected expression at end of input
  137 |     printf("Log Analysis Results:\n
      |     ^~~~~~
./samples/SAFE/__tmp_0a802c6c.c:137:5: error: expected declaration or statement at end of input
